@@ -5,6 +5,7 @@
 # ---------------------------  Global variables   -------------------------
 Global.IsData: FALSE
 Global.IsSignal: FALSE
+Global.IsAtlfast: FALSE
 Global.Period: p13tev
 Global.cutfile: ZeroLeptonRun2/data/cutfile8TeV.dat
 Global.JetCollectionKey: AntiKt4LCTopoJets
@@ -46,6 +47,7 @@ grl.GRLFile: ${ROOTCOREBIN}/data/SUSYTools/GRL/Summer2013/data12_8TeV.periodAllY
 susyobjs.IsData: %{Global.IsData}
 susyobjs.JetCollectionKey: %{Global.JetCollectionKey}
 susyobjs.Period: %{Global.Period}
+susyobjs.IsAtlfast: %{Global.IsAtlfast}
 
 # ---------------------------  Signal Region -----------------
 sr.IsData: %{Global.IsData}
